Conectada a la base de datos

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,10 +33,20 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto1
 excludes=
+file.reference.commons-pool2-2.11.1.jar=Librerias\\commons-pool2-2.11.1.jar
+file.reference.gson-2.10.1.jar=Librerias\\gson-2.10.1.jar
+file.reference.jedis-4.4.8.jar=Librerias\\jedis-4.4.8.jar
+file.reference.json-20231013.jar=Librerias\\json-20231013.jar
+file.reference.slf4j-api-1.7.36.jar=Librerias\\slf4j-api-1.7.36.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.commons-pool2-2.11.1.jar}:\
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.jedis-4.4.8.jar}:\
+    ${file.reference.json-20231013.jar}:\
+    ${file.reference.slf4j-api-1.7.36.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
